force-app/main/default/objects/Hotel_Bill__c/Hotel_Bill__c.object-meta.xml
<CustomObject>
    <label>Hotel Bill</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Hotel Bill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>