force-app/main/default/objects/Hotel_Bill__c/fields/BillDate__c.field-meta.xml
<CustomField>
    <fullName>BillDate__c</fullName>
    <label>BillDate</label>
    <type>Date</type>
</CustomField>