force-app/main/default/objects/Hotel_Bill__c/fields/HotelBooking__c.field-meta.xml
<CustomField>
    <fullName>HotelBooking__c</fullName>
    <label>HotelBooking</label>
    <referenceTo>HotelBooking__c</referenceTo>
    <relationshipLabel>Hotel Bills</relationshipLabel>
    <relationshipName>Hotel_Bills</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>