force-app/main/default/objects/Hotel_Bill__c/fields/HotelCustomer__c.field-meta.xml
<CustomField>
    <fullName>HotelCustomer__c</fullName>
    <label>HotelCustomer</label>
    <referenceTo>HotelCustomer__c</referenceTo>
    <relationshipLabel>Hotel Bills</relationshipLabel>
    <relationshipName>Hotel_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>