force-app/main/default/objects/Hotel_Bill__c/validationRules/Amount_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_rules</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &gt;  HotelBooking__r.Amount__c</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Bill should not be greater than HotelBooking.Amount.</errorMessage>
</ValidationRule>