force-app/main/default/objects/Hotel_Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>HotelCustomer__c</columns>
    <columns>HotelBooking__c</columns>
    <columns>Amount__c</columns>
    <columns>BillDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>